[metadata]
name = uhid
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@archlinux.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Operating System Kernels :: Linux
project_urls =
    homepage = https://github.com/FFY00/python-uhid

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.7

[options.packages.find]
where = src

[options.extras_require]
trio =
    trio
test =
    pytest
    pytest-timeout
    pytest-cov
    pytest-asyncio
    pytest-trio
    ioctl

[flake8]
min-python-version = 3.7.0
max-line-length = 127
max-complexity = 10

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = uhid
default_section = THIRDPARTY

[coverage:paths]
source =
    src
    */site-packages
    *\site-packages

[coverage:run]
omit =
    setup.py
branch = true
parallel = true
dynamic_context = test_function

[coverage:html]
show_contexts = true
